Fixing visibility of logo wrapper and category dropdown.

--- a/src/index.css
+++ b/src/index.css
@@ -628,6 +628,11 @@ footer a:hover {
 
 
 @media screen and (min-width: 769px) {
+    #logo-wrapper {
+        position: initial;
+        top: initial;
+    }
+
     #nav-button {
         display: none;
     }
